# misc

autoauth/: CMakeLists.txt  main.c
cross/analyzer/: cmake.scan  cmake.scan.sh  config.scan  config.scan.sh  cross.cmake  make.scan  make.scan.sh
cross/asan/: mk.asan.sh
cross/clang/: Makefile  arm_linux_gnueabihf.ml  mips_linux_gnu.ml  mips_unknown_linux_uclibc.ml
cross/rust/: mk.lib.sh  mk.rt.sh  mk.test.sh
ipc-syms/: Makefile  ipc-syms.obuild
ipc-syms/src/: main.ml
ranger-tools/: feh_rifle.rb  seq-rename  seq-rename.rb
rpi-conf/boot/: cmdline.txt  config.txt
rpi-conf/etc/: exports
rpi-conf/etc/iptables/: iptables.rules
rpi-conf/etc/netctl/: base
rpi-conf/etc/ssh/: sshd_config
rpi-conf/etc/sysctl.d/: 99-sysctl.conf
vm-conf/etc/iptables/: iptables.rules
vm-conf/etc/netctl/: base  bridge.vm
vm-conf/etc/systemd/system/: netctl@bridge.vm.service  vm-ifs.service
